done with the user activation
